--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@ layout: default
 		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
 		<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 	
+	<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
+	<span style="font-weight: bold;">Anyi Rao</span>, Francis Lau In arXiv:1803.09033, 2018	
+		
+		<span class="tag"><a href="http://arxiv.org/abs/1803.09033"> [Paper]</a></span>
+		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
+		<span class="tag"><a href="papers/AMApre.pdf"> [Presentation]</a></span>
+		
+		
+		
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
@@ -97,10 +106,7 @@ layout: default
 		<li>Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
 		to O(n). It is able to work in real time with practical length scores.<br>
 		<li>Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
-		<li>Developed a new free open-source Windows-based automatic music follower and accompanist.
-		<span class="tag"><a href="http://arxiv.org/abs/1803.09033"> [Paper]</a></span>
-		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
-		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
+		<li>Developed a new free open-source Windows-based automatic music follower and accompanist		
 		</li>
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
