--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ layout: default
 	<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
 	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou 
 		In Annual Meeting of the Association for Computational Linguistics 
-		(<span style="font-weight: bold;">ACL</span>), 2018 Submitted
+		(<span style="font-weight: bold;">ACL</span>), 2018
 		<span class="tag"><a href="https://arxiv.org/abs/1712.06751"> [Paper]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/WordAdver"> [Code]</a></span>
 		
