--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@ layout: default
 	<h3>Short Bio</h3>
 		<p> I am a final-year undergrad student from School of Electronic Science and Engineering 
 			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
-			Excellent Engineer Honor Class</a>, Nanjing University. I am a research assistant of The NSF Center for Big Learning, 
-			worked with Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a> (Director).
-			I was a research summer intern of The University of Hong Kong, worked with Prof.
-			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> (Associate Dean) and
-			a member of Learning And Mining from DatA group led by Prof. 
-			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> (ACM, AAAI, AAAS, IEEE Fellow). 
-		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
+			Excellent Engineer Honor Class</a>, Nanjing University. I was a research assistant of <a href="http://aimlab.cs.uoregon.edu/">AIM Lab</a> 
+			working with Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a>  (Director) and Prof. <a href="http://ix.cs.uoregon.edu/~lowd/">Daniel Lowd</a>, was a research intern of The University of Hong Kong, 
+			working with Prof.	 <a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> (Associate Dean) and
+			a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a>  group led by Prof. <a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> (ACM, AAAI, AAAS, IEEE Fellow).
+			I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
 	
@@ -81,10 +79,18 @@ layout: default
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/AMApre.pdf"> [Presentation]</a></span>
 		
-		
+
 		
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
+	
+			<div class="media">
+            <span class="pull-left"><img src="./images/aim.jpg" width="96px" height="96px"></span>
+            <div class="media-body">
+                <p><span style="font-weight: bold">2017-2018 </span>AIM Lab, Eugene, USA</p>
+            </div>  
+        </div>	
+	
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  The NSF Center for Big Learning, Eugene, OR, United States of America<br>
 		<li>Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
@@ -210,7 +216,7 @@ layout: default
 		Research Platforms and Libraries: TensorFlow, Theano, ROS, OpenCV, Caffe, Weka, liblinear, libSVM, Word2Vec, VLFeat, CVX,
 			SPAMS, OpenGL, WebGL, Git<br>
 		Operating Systems: Linux, Windows, macOS<br>
-		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
+		Language: Full proficiency English, A bit of Japanese and Cantonese, Native  Mandarin
 		</p>
 	<h3>Miscellaneous</h3>	
 		<p>Research intern group leader in <span class="tag"><a href=" http://www.cj-elec.com/en/">CHANGJIANG ELEC. TECH.</a>
