--- a/index.html
+++ b/index.html
@@ -84,43 +84,82 @@ layout: default
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
 	
-			<div class="media">
-            <span class="pull-left"><img src="./images/aim.jpg" width="96px" height="96px"></span>
-            <div class="media-body">
-                <p><span style="font-weight: bold">2017-2018 </span>AIM Lab, Eugene, USA</p>
-            </div>  
-        </div>	
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="19">
+		<p align="center" style="margin-top:0; margin-right:15mm; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="95" height="93" border="0"></a></p>
+        </td>
+		<td width="584" rowspan="7" valign="top" height="19">
+		<p style="margin-top:0; margin-right:1cm; margin-bottom:2mm;"><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
+		<span style="font-style: italic;"> Sept.2017-April.2018 </span> &nbsp  Advanced Integration and Mining Lab (AIM), Eugene, OR, United States of America<br>
+			<li>Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
+			<li>Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
+			and the method using adversarial training achieved excellent performances on benchmarks.
+			</li>
+			</p>
+			 </td>
+	</tbody>
+	</table>
 	
-	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
-	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  The NSF Center for Big Learning, Eugene, OR, United States of America<br>
-		<li>Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
-		<li>Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
-		and the method using adversarial training achieved excellent performances on benchmarks.
-		</li>
-		
-	<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
-	<span style="font-style: italic;"> Aug.2016-Sept.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
-		Nanjing University <br>
-		<li>Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
-		<li>Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
-		<li>Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
-		<li>Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloud.
-		</li>	
-	
-	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
-	<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="21">
+		<p align="center" style="margin-top:5mm; margin-right:15mm; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="95" height="93" border="0"></a></p>
+        </td>
+		<td width="584" rowspan="7" valign="top" height="19">
+		<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
+		<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
 		<li>Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
 		to O(n). It is able to work in real time with practical length scores.<br>
 		<li>Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
 		<li>Developed a new free open-source Windows-based automatic music follower and accompanist		
 		</li>
-		
-	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
-	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
+		</p>
+			 </td>
+	</tbody>
+	</table>
+	
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="21">
+		<p align="center" style="margin-top:5mm; margin-right:15mm; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="95" height="93" border="0"></a></p>
+        </td>
+		<td width="584" rowspan="7" valign="top" height="19">
+		<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
+		<span style="font-style: italic;"> Aug.2016-Sept.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br>
+		<li>Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
+		<li>Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
+		<li>Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
+		<li>Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloud.
+		</li>	
+		</p>
+		</td>
+	</tbody>
+	</table>
+	
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="15">
+		<p align="center" style="margin-top:5mm; margin-right:15mm; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="95" height="93" border="0"></a></p>
+        </td>
+		<td width="584" rowspan="7" valign="top" height="19">
+		<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
+		<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
 		<li>Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		<li>Preprocessed image data (cleaning, stretching, rotating, normalizing) and implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
 		<li>Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
 		</li>
+		</p>
+		</td>
+	</tbody>
+	</table>
+
+		
+
+	
+
+		
+
 		
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
@@ -187,26 +226,26 @@ layout: default
                 </p>		
 	</div> 
 		
-	<div class="content" >      
-		<h3>Awards</h3>
-		<p>
-		<li>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
-		<li>Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
-		<li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate students at the university, 
-			the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a><br>
-		<li>SenseTime Scholarship, awarded to 30 students out of all AI major undergraduate students in China<br>
-		<li>Zhenggang Scholarship, top 40 students in Nanjing University<br>
-		<li>Zhenggang Jingying Scholarship<br>
-		<li>Nanjing University People Scholarship, 2016, 2017<br>	
-                <li>Nanjing University Outstanding Student Leader Award<br>
-                <li>Nanjing University Outstanding Student Award<br>
-	        <li>Nanjing University Top Volunteer Excellence Award<br>
-		<li>World ranking 32nd in 2016 <a href="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a><br>
-		<li>Meritorious winner prize in the 2016 National Mathematical Contest in Modeling<br>
-		<li>First prize in the 2014 University Electronics Design Contest<br>
-		<li>First prize in Invitational National Mathematical Olympiad <a href="http://anyirao.com/img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
-		</li>
-		</p>	
+	<div class="content" >    
+			<h3>Awards</h3>  
+			<table style="border-spacing:2px" width="100%">
+			<tbody><tr><td> National Scholarship awarded by the China Ministry of Education, the highest honor in China </td> <td> 2015 </td></tr>
+			<tr><td>Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province </td> <td> 2017 </td></tr>
+			<tr><td>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate students at the university, 
+				the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a></td> <td>2018</td></tr>
+			<tr><td> SenseTime Scholarship, awarded to 30 students out of all AI major undergraduate students in China</td> <td> 2017 </td></tr>
+			<tr><td> Zhenggang Scholarship, top 40 students in Nanjing University </td> <td> 2016</td></tr>
+			<tr><td>Zhenggang Jingying Scholarship </td> <td> 2017 </td></tr>
+			<tr><td> Nanjing University People Scholarship</td> <td> 2016, 2017 </td></tr>
+			<tr><td> Nanjing University Outstanding Student Leader Award</td> <td> 2015 </td></tr>
+			<tr><td> Nanjing University Outstanding Student Award</td> <td> 2016 </td></tr>
+			<tr><td> Nanjing University Top Volunteer Excellence Award </td> <td> 2015 </td></tr>
+			<tr><td> World ranking 32nd in 2016 <a href="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a> </td> <td>  </td></tr>
+			<tr><td>Meritorious winner prize in the 2016 National Mathematical Contest in Modeling  </td> <td>  </td></tr>
+			<tr><td>First prize in the 2014 University Electronics Design Contest  </td> <td>  </td></tr>
+			<tr><td>First prize in Invitational National Mathematical Olympiad <a href="./img/MathSeniorHigh.png">[Gold Medal]  </td> <td>  2013</td></tr>
+			</tbody>
+			</table>
 	</div>    
 		
 	<div class="content" >      
