--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ layout: default
 	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         <td width="19" height="19">
-		<p align="center" style="margin-top:0; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="95" height="93" border="0"></a></p>
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="95" height="93" border="0"></a></p>
         </td>
-		<td width="84" rowspan="14" valign="top" height="19">
-		<p style="margin-top:0; margin-right:1cm; margin-bottom:2mm;"><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
+		<td width="84" rowspan="9" valign="top" height="19">
+		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 		<span style="font-style: italic;"> Sept.2017-April.2018 </span> &nbsp  Advanced Integration and Mining Lab (AIM), Eugene, OR, United States of America<br>
 			<li>Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
 			<li>Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
@@ -104,9 +104,9 @@ layout: default
 	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         <td width="19" height="21">
-		<p align="center" style="margin-top:5mm; margin-right:15mm; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="95" height="93" border="0"></a></p>
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="95" height="93" border="0"></a></p>
         </td>
-		<td width="584" rowspan="7" valign="top" height="19">
+		<td width="84" rowspan="9" valign="top" height="19">
 		<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
 		<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
 		<li>Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
@@ -122,9 +122,9 @@ layout: default
 	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         <td width="19" height="21">
-		<p align="center" style="margin-top:5mm; margin-right:15mm; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="95" height="93" border="0"></a></p>
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="95" height="93" border="0"></a></p>
         </td>
-		<td width="584" rowspan="9" valign="top" height="19">
+		<td width="84" rowspan="9" valign="top" height="19">
 		<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
 		<span style="font-style: italic;"> Aug.2016-Sept.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br>
 		<li>Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
@@ -139,10 +139,10 @@ layout: default
 	
 	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        <td width="19" height="15">
-		<p align="center" style="margin-top:5mm; margin-right:15mm; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="95" height="93" border="0"></a></p>
+        <td width="19" height="13">
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="95" height="93" border="0"></a></p>
         </td>
-		<td width="584" rowspan="7" valign="top" height="19">
+		<td width="84" rowspan="7" valign="top" height="19">
 		<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
 		<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
 		<li>Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
@@ -161,7 +161,12 @@ layout: default
 		
 
 		
-	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads</span> <br>
+
+	
+	<div class="content anchor" id="project">  
+	   <h3>Course Projects</h3>
+	   
+	   	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
 		<li>Learned K-armed bandit, Monte Carlo RL, imitation learning. <br>
 		<li>Constructed three models to depict road circumstances and two models to predict car motion using 
@@ -179,9 +184,7 @@ layout: default
 		<span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Oral]</a></span><br>
 		</li>	
 	</div>        
-	
-	<div class="content anchor" id="project">  
-	   <h3>Course Projects</h3>
+	   
 		<p><span style="font-weight: bold;">Machine Learning</span> Construction of a Spam Filtering System <br> 
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
