--- a/index.html
+++ b/index.html
@@ -89,6 +89,90 @@ layout: default
         <td width="19" height="19">
 		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="95" height="93" border="0"></a></p>
         </td>
+		<td width="180" rowspan="9" valign="top" height="19">
+		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
+		<span style="font-style: italic;"> Sept.2017-April.2018 </span> &nbsp  Advanced Integration and Mining Lab (AIM), Eugene, OR, United States of America<br>
+			<li>Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
+			<li>Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
+			and the method using adversarial training achieved excellent performances on benchmarks.
+			</li>
+			</p>
+			 </td>
+	</tbody>
+	</table>
+	
+	
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="19">
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="95" height="93" border="0"></a></p>
+        </td>
+		<td width="180" rowspan="9" valign="top" height="19">
+		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
+		<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
+		<li>Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
+		to O(n). It is able to work in real time with practical length scores.<br>
+		<li>Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
+		<li>Developed a new free open-source Windows-based automatic music follower and accompanist		
+		</li>
+		</p>
+			 </td>
+	</tbody>
+	</table>
+	
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="21">
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="95" height="93" border="0"></a></p>
+        </td>
+		<td width="180" rowspan="9" valign="top" height="19">
+		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
+		<span style="font-style: italic;"> Aug.2016-Sept.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br>
+		<li>Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
+		<li>Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
+		<li>Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
+		<li>Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloud.
+		</li>	
+		</p>
+		</td>
+	</tbody>
+	</table>
+	
+		<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="21">
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="95" height="93" border="0"></a></p>
+        </td>
+		<td width="180" rowspan="9" valign="top" height="19">
+		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
+		<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
+		<li>Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
+		<li>Preprocessed image data (cleaning, stretching, rotating, normalizing) and implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
+		<li>Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
+		</li>
+		</p>
+		</td>
+	</tbody>
+	</table>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+		<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="19">
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="95" height="93" border="0"></a></p>
+        </td>
 		<td width="130" rowspan="9" valign="top" height="19">
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 		<span style="font-style: italic;"> Sept.2017-April.2018 </span> &nbsp  Advanced Integration and Mining Lab (AIM), Eugene, OR, United States of America<br>
