--- a/index.html
+++ b/index.html
@@ -54,27 +54,58 @@ layout: default
 		
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
-	<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
-	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou 
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="19">
+		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="135" height="93" border="0"></p>
+        </td>
+		<td width="180" rowspan="9" valign="top" height="19">
+		<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
+	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou <br>
 		In Annual Meeting of the Association for Computational Linguistics 
-		(<span style="font-weight: bold;">ACL</span>), 2018
+		(<span style="font-weight: bold;">ACL</span>), 2018 <br>
 		<span class="tag"><a href="https://arxiv.org/abs/1712.06751"> [Paper]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/WordAdver"> [Code]</a></span>
-		
+			 </td>
+	</tbody>
+	</table>
+	
+	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="19">
+		<p align="center" style="margin-top:2mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/iros2018.png" width="135" height="93" border="0"></p>
+        </td>
+		<td width="180" rowspan="9" valign="top" height="19">
 	<p><span style="font-weight: bold;">[2] SDFMap: A Real-time 3D Mapping Framework for LiDAR Point Cloud</span> <br>
-	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Pei Li, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
-		In IEEE/RSJ International Conference on Intelligent Robots and Systems (<span style="font-weight: bold;">IROS</span>), 2018 Submitted	
-		
+	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Pei Li, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution) <br>
+		In IEEE/RSJ International Conference on Intelligent Robots and Systems (<span style="font-weight: bold;">IROS</span>), 2018 Submitted	<br>
 		<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
 		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
 		<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
-	
-	<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
-	<span style="font-weight: bold;">Anyi Rao</span>, Francis Lau In arXiv:1803.09033, 2018	
-		
+		</p>
+			 </td>
+	</tbody>
+	</table>
+		<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+        <td width="19" height="19">
+		<p align="center" style="margin-top:2mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="135" height="93" border="0"></p>
+        </td>
+		<td width="180" rowspan="9" valign="top" height="19">
+		<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
+	<span style="font-weight: bold;">Anyi Rao</span>, Francis Lau In arXiv:1803.09033, 2018	<br>
 		<span class="tag"><a href="http://arxiv.org/abs/1803.09033"> [Paper]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/AMApre.pdf"> [Presentation]</a></span>
+			 </td>
+	</tbody>
+	</table>	
+	
+	
+		
+
+	
+
 		
 
 		
