--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ layout: default
 		
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
-	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        <td width="19" height="19">
-		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="135" height="93" border="0"></p>
+     	 <td width="200">
+		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="200"  border="0"></p>
         </td>
-		<td width="180" rowspan="9" valign="top" height="19">
+		<td  valign="middle">
 		<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
 	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou <br>
 		In Annual Meeting of the Association for Computational Linguistics 
@@ -70,12 +70,12 @@ layout: default
 	</tbody>
 	</table>
 	
-	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
-    <tbody><tr valign="baseline">
-        <td width="19" height="19">
-		<p align="center" style="margin-top:2mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/iros2018.png" width="135" height="93" border="0"></p>
-        </td>
-		<td width="180" rowspan="9" valign="top" height="19">
+	<table bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">       
+	 <td width="200">
+		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/iros2018.png" width="200"  border="0"></p>
+        </td >
+		<td  valign="middle">
 	<p><span style="font-weight: bold;">[2] SDFMap: A Real-time 3D Mapping Framework for LiDAR Point Cloud</span> <br>
 	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Pei Li, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution) <br>
 		In IEEE/RSJ International Conference on Intelligent Robots and Systems (<span style="font-weight: bold;">IROS</span>), 2018 Submitted	<br>
@@ -86,12 +86,12 @@ layout: default
 			 </td>
 	</tbody>
 	</table>
-		<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+		<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        <td width="19" height="19">
-		<p align="center" style="margin-top:2mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="135" height="93" border="0"></p>
+        	 <td width="200">
+		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="200"  border="0"></p>
         </td>
-		<td width="180" rowspan="9" valign="top" height="19">
+		<td  valign="middle">
 		<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
 	<span style="font-weight: bold;">Anyi Rao</span>, Francis Lau In arXiv:1803.09033, 2018	<br>
 		<span class="tag"><a href="http://arxiv.org/abs/1803.09033"> [Paper]</a></span>
