--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ layout: default
 	<h3>Publication</h3>
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-     	 <td width="200">
-		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="200"  border="0"></p>
+     	 <td width="180">
+		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="180"  border="0"></p>
         </td>
 		<td  valign="middle">
 		<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
@@ -72,8 +72,8 @@ layout: default
 	
 	<table bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">       
-	 <td width="200">
-		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/iros2018.png" width="200"  border="0"></p>
+	 <td width="180">
+		<p align="center" style="margin-top:3mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/iros2018.png" width="180"  border="0"></p>
         </td >
 		<td  valign="middle">
 	<p><span style="font-weight: bold;">[2] SDFMap: A Real-time 3D Mapping Framework for LiDAR Point Cloud</span> <br>
@@ -88,8 +88,8 @@ layout: default
 	</table>
 		<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        	 <td width="200">
-		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="200"  border="0"></p>
+        	 <td width="180">
+		<p align="center" style="margin-top:1mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="180"  border="0"></p>
         </td>
 		<td  valign="middle">
 		<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
@@ -112,12 +112,12 @@ layout: default
 	<div class="content anchor" id="research">  	      
 	<h3>Research Experience</h3>		
 	
-	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        <td width="19" height="19">
-		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="95" height="93" border="0"></a></p>
+        <td width="19" >
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="19" border="0"></a></p>
         </td>
-		<td width="180" rowspan="9" valign="top" height="19">
+		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 		<span style="font-style: italic;"> Sept.2017-April.2018 </span> &nbsp  Advanced Integration and Mining Lab (AIM), Eugene, OR, United States of America<br>
 		Advisor: Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a>  (Director) and Prof. <a href="http://ix.cs.uoregon.edu/~lowd/">Daniel Lowd</a> <br>
@@ -130,13 +130,12 @@ layout: default
 	</tbody>
 	</table>
 	
-	
-	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        <td width="19" height="19">
-		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="95" height="93" border="0"></a></p>
+        <td width="19" >
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="19" border="0"></a></p>
         </td>
-		<td width="180" rowspan="9" valign="top" height="19">
+		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
 		<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
 		Advisor: Prof.	 <a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> (Associate Dean) <br>
@@ -150,12 +149,12 @@ layout: default
 	</tbody>
 	</table>
 	
-	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        <td width="19" height="21">
-		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="95" height="93" border="0"></a></p>
+        <td width="19" >
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="19" border="0"></a></p>
         </td>
-		<td width="180" rowspan="9" valign="top" height="19">
+		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
 		<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
 		Director: Prof. <a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> (ACM, AAAI, AAAS, IEEE Fellow, Academy of Europe Foreign Member) <br> 
@@ -168,12 +167,12 @@ layout: default
 	</tbody>
 	</table>
 	
-	<table width="1224" bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        <td width="19" height="21">
-		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="95" height="93" border="0"></a></p>
+        <td width="19" >
+		<p align="center" style="margin-top:5mm; margin-right:0; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="19" border="0"></a></p>
         </td>
-		<td width="180" rowspan="9" valign="top" height="19">
+		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
 		<span style="font-style: italic;"> Aug.2016-Sept.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br>
 		Supervisor: Prof. <a href="http://ese.nju.edu.cn/faculty.php?name=dusidan&lang=cn">  Sidan Du</a> (Director)<br>
